--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,28 +1,21 @@
 <html>
-    <head>
 
-        <script src="https://sapui5.hana.ondemand.com/1.90.0/resources/sap-ui-core.js"
-                data-sap-ui-libs="sap.m"
-                data-sap-ui-theme="sap_fiori_3_dark"
-                data-sap-ui-bindingSyntax="complex"
-                data-sap-ui-resourceroots='{
+<head>
+    <script src="https://sapui5.hana.ondemand.com/1.90.0/resources/sap-ui-core.js" data-sap-ui-libs="sap.m"
+        data-sap-ui-theme="sap_fiori_3_dark" data-sap-ui-bindingSyntax="complex" data-sap-ui-resourceroots='{
                     "tcs.fin.ap": "./"
                 }'>
+                </script>
+    <script>
+        var oCompContainer = new sap.ui.core.ComponentContainer({
+            name: "tcs.fin.ap1"
+        });
+        oCompContainer.placeAt("content");            
+    </script>
+</head>
 
-        </script>
+<body class="sapUiBody">
+    <div id="content"></div>
+</body>
 
-        <script>
-
-            var oCompContainer = new sap.ui.core.ComponentContainer({
-                name: "tcs.fin.ap"
-            });
-
-            oCompContainer.placeAt("content");
-            
-        </script>
-
-    </head>
-    <body class="sapUiBody">
-        <div id="content"></div>
-    </body>
 </html>
